pb responsive and alignement resolved

--- a/src/body/AccordionPower.module.css
+++ b/src/body/AccordionPower.module.css
@@ -1,3 +1,7 @@
+* {
+	border: 1px dotted grey;
+}
+
 .border {
 	border: 1px solid;
 	border-color: red;
